--- a/theme.css
+++ b/theme.css
@@ -79,6 +79,8 @@
 	--link-decoration: none;
 	--link-external-decoration: none;
 	--embed-padding: 0 0 0 var(--size-4-4);
+	
+	--code-normal: var(--gray-2);
 }
 
 /* Search */
